<resources>
    <string name="app_name">FashionTap</string>
    <string name="title_home">我的衣櫃</string>
    <string name="title_dashboard">潮流配搭</string>
    <string name="title_notifications">潮流影片</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_fashion">FashionActivity</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_register">RegisterActivity</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Login</string>
    <string name="register">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>

    <string name="avatar">Profile picture</string>
    <string name="display_name">Display Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="password_confirm">Confirm password</string>
    <string name="submit">Submit</string>
    <string name="title_activity_show_all">所有衣物</string>
    <string name="title_picking">幫我選</string>
</resources>
